first day report

--- a/Training.html
+++ b/Training.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-	<html>
+	<html lang="eng">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>MyFirstSite</title>
 		<link rel="icon" href="emet.jpg">
+		<meta name="viewport" content="width=device-width">
+		<meta content="height=device-width">
+		<meta  content="user-scalable=no">
 	</head>
 	<body>
 		<h1>First site</h1>
@@ -118,6 +121,19 @@ Let it be icon of site.</pre>
 	</ul>
 	<p>Now some url</p>
 	<a href="https://ru.code-basics.com">Here i learn basic HTML.</a>
+	<p>Do you  like music?</p>
+	<audio controls>
+		<source src="Sonata No. 8 Pathétique L. van Beethoven, Op. 13.mp3">
+	</audio>
+	<p>Wonderful, isn`t it? What about something faster?</p>
+	<audio>
+		<source src="ThisIsMusic.mp3">
+	</audio>
+	<p>"What is music?"</p>
+	<video controls>
+		<source src="Now THIS is music.mp4">
+	</video>
+	<p>Its fragment from anime <a href="https://jut.su/takt-op-destiny/">Takt Op. Destiny</a></p>
 	</body>
 	</html>
 	
